form preview done

--- a/src/app/components/dynamic-forms/dynamic-forms.component.html
+++ b/src/app/components/dynamic-forms/dynamic-forms.component.html
@@ -1,9 +1,90 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div formArrayName="questions">
-    <div *ngFor="let question of questions.controls; let i = index" [formGroupName]="i">
-      <label>
-        Question Type:
-        <select formControlName="type" (input)="onTypeChange($event, i)" class="question-type-dropdown">
+<div class="form-container">
+  <div class="form-creation">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div formArrayName="questions">
+        <div *ngFor="let question of questions.controls; let i = index" [formGroupName]="i">
+          <label>
+            Question Type:
+            <select formControlName="type" (input)="onTypeChange($event, i)" class="question-type-dropdown">
+              <option value="">Select Question Type</option>
+              <option value="short">Short Answer</option>
+              <option value="long">Long Answer</option>
+              <option value="multiple">Multiple Choice</option>
+              <option value="checkbox">Checkbox</option>
+              <option value="time">Time</option>
+              <option value="date">Date</option>
+            </select>
+          </label>
+          <label>
+            Question:
+            <input formControlName="question" type="text" class="input-text form-control" required>
+          </label>
+
+          <div [ngSwitch]="question.get('type')?.value">
+            <div *ngSwitchCase="'short'">
+              <label>
+                Answer:
+                <input formControlName="response" type="text" class="input-text non-selectable" readonly>
+              </label>
+            </div>
+            <div *ngSwitchCase="'long'">
+              <label>
+                Answer:
+                <textarea formControlName="response" class="textarea non-selectable" readonly></textarea>
+              </label>
+            </div>
+            <div *ngSwitchCase="'multiple'">
+              <div formGroupName="answer">
+                <div formArrayName="options">
+                  <label>
+                    Options:
+                  </label>
+                  <div *ngFor="let option of getOptions(i).controls; let j = index" [formGroupName]="j" class="option-value">
+                    <input type="radio" [value]="option.value.value" (change)="onRadioChange($event, i)" class="input-radio">
+                    <input formControlName="value" type="text" class="input-option">
+                    <i *ngIf="j === getOptions(i).controls.length - 1" class="pi pi-plus-circle" (click)="handleIconClick($event, i)"></i>
+                    <i *ngIf="j !== getOptions(i).controls.length - 1 || getOptions(i).controls.length > 1" class="pi pi-minus-circle" (click)="removeOption(i, j)"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div *ngSwitchCase="'checkbox'">
+              <div formGroupName="answer">
+                <div formArrayName="options">
+                  <label>
+                    Options:
+                  </label>
+                  <div *ngFor="let option of getOptions(i).controls; let j = index" [formGroupName]="j" class="option-value">
+                    <input type="checkbox" [value]="option.value.value" (change)="onCheckboxChange($event, i)" class="input-checkbox">
+                    <input formControlName="value" type="text" class="input-option">
+                    <i *ngIf="j === getOptions(i).controls.length - 1" class="pi pi-plus-circle" (click)="handleIconClick($event, i)"></i>
+                    <i *ngIf="j !== getOptions(i).controls.length - 2 || getOptions(i).controls.length > 1" class="pi pi-minus-circle" (click)="removeOption(i, j)"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div *ngSwitchCase="'time'">
+              <label>
+                Time:
+                <input type="time" formControlName="response" class="input-time non-selectable" readonly>
+              </label>
+            </div>
+            <div *ngSwitchCase="'date'">
+              <label>
+                Date:
+                <input type="date" formControlName="response" class="input-date non-selectable" readonly>
+              </label>
+            </div>
+          </div>
+          <label>
+            Required:
+            <input type="checkbox" formControlName="isRequired" (change)="onRequiredChange($event, i)">
+          </label>
+          <button type="button" class="remove" (click)="removeQuestion(i)">Remove Question</button>
+        </div>
+      </div>
+      <div class="types">
+        <select #questionTypeDropdown (input)="onTypeSelect($event, questionTypeDropdown)" class="question-type-dropdown">
           <option value="">Select Question Type</option>
           <option value="short">Short Answer</option>
           <option value="long">Long Answer</option>
@@ -12,80 +93,14 @@
           <option value="time">Time</option>
           <option value="date">Date</option>
         </select>
-      </label>
-      <label>
-        Question:
-        <input formControlName="question" type="text" class="input-text" required>
-      </label>
-      <div [ngSwitch]="question.get('type')?.value">
-        <div *ngSwitchCase="'short'">
-          <label>
-            Answer:
-            <input formGroupName="answer" formControlName="response" type="text" class="input-text">
-          </label>
-        </div>
-        <div *ngSwitchCase="'long'">
-          <label>
-            Answer:
-            <textarea formGroupName="answer" formControlName="response" class="textarea"></textarea>
-          </label>
-        </div>
-        <div *ngSwitchCase="'multiple'">
-          <div formGroupName="answer">
-            <div formArrayName="options">
-              <label>
-                Options:
-                <div *ngFor="let option of getOptions(i).controls; let j = index" [formGroupName]="j">
-                  <input type="radio" [value]="option.value.value" (change)="onRadioChange($event, i)" class="input-radio">
-                  <input formControlName="value" type="text" class="input-option">
-                </div>
-              </label>
-              <button type="button" (click)="addOption(i)" class="addoption">Add Option</button>
-            </div>
-          </div>
-        </div>
-        <div *ngSwitchCase="'checkbox'">
-          <div formGroupName="answer">
-            <div formArrayName="options">
-              <label>
-                Options:
-                <div *ngFor="let option of getOptions(i).controls; let j = index" [formGroupName]="j">
-                  <input type="checkbox" [value]="option.value.value" (change)="onCheckboxChange($event, i)" class="input-checkbox">
-                  <input formControlName="value" type="text" class="input-option">
-                </div>
-              </label>
-              <button type="button" (click)="addOption(i)" class="addoption">Add Option</button>
-            </div>
-          </div>
-        </div>
-        <div *ngSwitchCase="'time'">
-          <label>
-            Time:
-            <input type="time" formGroupName="answer" formControlName="response" class="input-time">
-          </label>
-        </div>
-        <div *ngSwitchCase="'date'">
-          <label>
-            Date:
-            <input type="date" formGroupName="answer" formControlName="response" class="input-date">
-          </label>
-        </div>
       </div>
-      <button type="button" class="remove" (click)="removeQuestion(i)">Remove Question</button>
-    </div>
+      <div class="submitform">
+        <button type="submit" class="">Submit</button>
+      </div>
+    </form>
   </div>
-  <div class="types">
-    <select #questionTypeDropdown (input)="onTypeSelect($event, questionTypeDropdown)" class="question-type-dropdown">
-      <option value="">Select Question Type</option>
-      <option value="short">Short Answer</option>
-      <option value="long">Long Answer</option>
-      <option value="multiple">Multiple Choice</option>
-      <option value="checkbox">Checkbox</option>
-      <option value="time">Time</option>
-      <option value="date">Date</option>
-    </select>
+
+  <div class="form-preview">
+    <app-form-preview [form]="form"></app-form-preview>
   </div>
-  <div class="submitform">
-    <button type="submit" class="">Submit</button>
-  </div>
-</form>
+</div>
