--- a/src/app/components/dynamic-forms/dynamic-forms.component.scss
+++ b/src/app/components/dynamic-forms/dynamic-forms.component.scss
@@ -59,11 +59,16 @@ label {
   outline: none;
 }
 
+.input-radio,.input-checkbox{
+  cursor: pointer;
+}
+
 .input-option {
   margin: 0.5rem 0.5rem;
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
+  outline:none
 }
 
 .textarea {
@@ -83,8 +88,20 @@ label {
   margin-bottom: 1rem;
 }
 
+.pi{
+  cursor: pointer;
+}
+
 .pi-plus-circle {
   margin-right: 7px;
+}
+
+.requiredd{
+  display: flex;
+  flex-direction: row;
+  // align-items: center;
+  font-size: 1rem;
+  gap: 10px;
 }
 
 button {
@@ -117,4 +134,9 @@ button {
   pointer-events: none;
   user-select: none;
   background-color: #f5f5f5; /* Optional: make it look disabled */
+}
+
+input.ng-invalid.ng-touched,
+select.ng-invalid.ng-touched {
+  border: 1.5px solid #faa4a4 !important;
 }
