--- a/src/app/components/FormPreview/form-preview/form-preview.component.html
+++ b/src/app/components/FormPreview/form-preview/form-preview.component.html
@@ -1,36 +1,35 @@
 <div class="form-preview">
-    <h2 class="heading">Form Preview</h2>
-    <form [formGroup]="form">
-      <div formArrayName="questions">
-        <div *ngFor="let question of formGroups; let i = index" [formGroupName]="i" class="question">  
-          <label class="mb-2">
-            {{ question.get('question')?.value }}
-            <span *ngIf="isRequired(question)" class="required">*</span>
-          </label>
-          <div [ngSwitch]="question.get('type')?.value" class="mb-3">
-            <input *ngSwitchCase="'short'" type="text" formControlName="response" class="input-text" [placeholder]="question.get('placeholder')?.value"/>
-            <textarea *ngSwitchCase="'long'" formControlName="response" rows="4" class="textarea" [placeholder]="question.get('placeholder')?.value"></textarea>
-            <input *ngSwitchCase="'time'" type="time" formControlName="response" class="input-time" />
-            <input *ngSwitchCase="'date'" type="date" formControlName="response" class="input-date" />
-            <div *ngSwitchCase="'multiple'">
-              <div formArrayName="options">
-                <div *ngFor="let option of getOptions(question).controls; let j = index" [formGroupName]="j" class="option-value">
-                  <input type="radio" [value]="option.get('value')?.value" [formControlName]="'selectedOption'" class="input-radio" />
-                  <label>{{ option.get('value')?.value }}</label>
-                </div>
+  <h2 class="heading">Form Preview</h2>
+  <form [formGroup]="form">
+    <div formArrayName="questionsListFormArray">
+      <div *ngFor="let question of formGroups; let i = index" [formGroup]="$any(question)" class="question">
+        <label class="mb-2">
+          {{ question.get('questionText')?.value }}
+          <span *ngIf="isRequired(question)" class="required">*</span>
+        </label>
+        <div [ngSwitch]="question.get('questionType')?.value" class="mb-3">
+          <input *ngSwitchCase="'short'" type="text" formControlName="answer" class="input-text" [placeholder]="question.get('placeholder')?.value"/>
+          <textarea *ngSwitchCase="'long'" formControlName="answer" rows="4" class="textarea" [placeholder]="question.get('placeholder')?.value"></textarea>
+          <input *ngSwitchCase="'time'" type="time" formControlName="answer" class="input-time" />
+          <input *ngSwitchCase="'date'" type="date" formControlName="answer" class="input-date" />
+          <div *ngSwitchCase="'multiple'">
+            <div formArrayName="options">
+              <div *ngFor="let option of getOptions(question).controls; let j = index" [formGroup]="$any(option)" class="option-value">
+                <input type="radio" [value]="option.get('value')?.value" class="input-radio" />
+                <label>{{ option.get('value')?.value }}</label>
               </div>
             </div>
-            <div *ngSwitchCase="'checkbox'">
-              <div formArrayName="options">
-                <div *ngFor="let option of getOptions(question).controls; let j = index" [formGroupName]="j" class="option-value">
-                  <input type="checkbox" [value]="option.get('value')?.value" [formControlName]="j" class="input-checkbox" />
-                  <label>{{ option.get('value')?.value }}</label>
-                </div>
+          </div>
+          <div *ngSwitchCase="'checkbox'">
+            <div formArrayName="options">
+              <div *ngFor="let option of getOptions(question).controls; let j = index" [formGroup]="$any(option)" class="option-value">
+                <input type="checkbox" [value]="option.get('value')?.value" class="input-checkbox" />
+                <label>{{ option.get('value')?.value }}</label>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </form>
-  </div>
-  
+    </div>
+  </form>
+</div>
