--- a/src/app/components/dynamic-forms/dynamic-forms.component.html
+++ b/src/app/components/dynamic-forms/dynamic-forms.component.html
@@ -1,105 +1,190 @@
 <div class="form-container">
   <div class="form-creation">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div formArrayName="questions">
-        <div *ngFor="let eachQuestionFormGroup of questions.controls; let i = index" [formGroup]="$any(eachQuestionFormGroup)">
-          <label>
-            Question Type:
-            <select formControlName="type" (input)="onTypeChange($event, i)" class="question-type-dropdown">
-              <option value="">Select Question Type</option>
-              <option value="short">Short Answer</option>
-              <option value="long">Long Answer</option>
-              <option value="multiple">Multiple Choice</option>
-              <option value="checkbox">Checkbox</option>
-              <option value="time">Time</option>
-              <option value="date">Date</option>
-            </select>
-          </label>
-          <label>
-            Question:
-            <input type="text" pInputText formControlName="question" class="input-text"> 
-          </label>
+    <div *ngFor="let eachQuestionFormGroup of $any(form?.get('questionsListFormArray'))?.controls; let i = index">
+      <div [formGroup]="$any(eachQuestionFormGroup)"
+      >
+        <label>
+          Question Type:
+          <select
+            formControlName="questionType"
+            (input)="onTypeChange($event, i)"
+            class="question-type-dropdown"
+          >
+            <option value="">Select Question Type</option>
+            <option value="short">Short Answer</option>
+            <option value="long">Long Answer</option>
+            <option value="multiple">Multiple Choice</option>
+            <option value="checkbox">Checkbox</option>
+            <option value="time">Time</option>
+            <option value="date">Date</option>
+          </select>
+        </label>
+        <label>
+          Question:
+          <input
+            type="text"
+            pInputText
+            formControlName="questionText"
+            class="input-text"
+          />
+        </label>
 
-          <div [ngSwitch]="eachQuestionFormGroup.get('type')?.value">
-            <div *ngSwitchCase="'short'">
-              <label>
-                Description:
-                <input formControlName="placeholder" type="text" class="input-text">
-              </label>
-            </div>
-            <div *ngSwitchCase="'long'">
-              <label>
-                Description:
-                <textarea formControlName="placeholder" class="textarea"></textarea>
-              </label>
-            </div>
-            <div *ngSwitchCase="'multiple'">
-              <div formGroupName="answer">
-                <div formArrayName="options">
-                  <label>
-                    Options:
-                  </label>
-                  <div *ngFor="let option of getOptions(i).controls; let j = index" [formGroupName]="j" class="option-value">
-                    <input type="radio" [value]="option.value.value" (change)="onRadioChange($event, i)" class="input-radio">
-                    <input pInputText formControlName="value" type="text" class="input-option">
-                    <i *ngIf="j === getOptions(i).controls.length - 1" class="pi pi-plus-circle" (click)="handleIconClick($event, i)"></i>
-                    <i *ngIf="j !== getOptions(i).controls.length - 1 || getOptions(i).controls.length > 1" class="pi pi-minus-circle" (click)="removeOption(i, j)"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div *ngSwitchCase="'checkbox'">
-              <div formGroupName="answer">
-                <div formArrayName="options">
-                  <label>
-                    Options:
-                  </label>
-                  <div *ngFor="let option of getOptions(i).controls; let j = index" [formGroupName]="j" class="option-value">
-                    <input type="checkbox" [value]="option.value.value" (change)="onCheckboxChange($event, i)" class="input-checkbox">
-                    <input pInputText formControlName="value" type="text" class="input-option">
-                    <i *ngIf="j === getOptions(i).controls.length - 1" class="pi pi-plus-circle" (click)="handleIconClick($event, i)"></i>
-                    <i *ngIf="j !== getOptions(i).controls.length - 1 || getOptions(i).controls.length > 1" class="pi pi-minus-circle" (click)="removeOption(i, j)"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div *ngSwitchCase="'time'">
-              <label>
-                Time:
-                <input type="time" formControlName="response" class="input-time non-selectable" readonly>
-              </label>
-            </div>
-            <div *ngSwitchCase="'date'">
-              <label>
-                Date:
-                <input type="date" formControlName="response" class="input-date non-selectable" readonly>
-              </label>
-            </div>
-          </div>
-          <div class="requiredd">
+        <div [ngSwitch]="eachQuestionFormGroup.get('questionType')?.value">
+          <div *ngSwitchCase="'short'">
             <label>
-              Required:
+              Description:
+              <input
+                formControlName="placeholder"
+                type="text"
+                class="input-text"
+              />
             </label>
-              <input type="checkbox" class="input-checkbox" formControlName="isRequired" (change)="onRequiredChange($event, i)">
           </div>
-          <button type="button" class="remove" (click)="removeQuestion(i)">Remove Question</button>
+          <div *ngSwitchCase="'long'">
+            <label>
+              Description:
+              <textarea
+                formControlName="placeholder"
+                class="textarea"
+              ></textarea>
+            </label>
+          </div>
+          <div *ngSwitchCase="'multiple'">
+            <div>
+              <label> Options: </label>
+              <div
+                *ngFor="
+                  let optionFormGroup of eachQuestionFormGroup.controls?.options
+                    ?.controls;
+                  let j = index
+                "
+                [formGroup]="optionFormGroup"
+                class="option-value"
+              >
+               
+                <input
+                  pInputText
+                  formControlName="value"
+                  type="text"
+                  class="input-option"
+                />
+                <i
+                  *ngIf="
+                    j ===
+                    eachQuestionFormGroup.controls?.options?.controls.length - 1
+                  "
+                  class="pi pi-plus-circle"
+                  (click)="handleIconClick($event, i)"
+                ></i>
+                <i
+                  *ngIf="
+                    j !==
+                      eachQuestionFormGroup.controls?.options?.controls.length -
+                        1 ||
+                    eachQuestionFormGroup.controls?.options?.controls.length > 1
+                  "
+                  class="pi pi-minus-circle"
+                  (click)="removeOption(i, j)"
+                ></i>
+              </div>
+            </div>
+          </div>
+          <div *ngSwitchCase="'checkbox'">
+            <div>
+              <label> Options: </label>
+              <div
+                *ngFor="
+                  let optionFormGroup of eachQuestionFormGroup.controls?.options
+                    ?.controls;
+                  let j = index
+                "
+                [formGroup]="optionFormGroup"
+                class="option-value"
+              >
+              
+                <input
+                  pInputText
+                  formControlName="value"
+                  type="text"
+                  class="input-option"
+                />
+                <i
+                  *ngIf="
+                    j ===
+                    eachQuestionFormGroup.controls?.options?.controls.length - 1
+                  "
+                  class="pi pi-plus-circle"
+                  (click)="handleIconClick($event, i)"
+                ></i>
+                <i
+                  *ngIf="
+                    j !==
+                      eachQuestionFormGroup.controls?.options?.controls.length -
+                        1 ||
+                    eachQuestionFormGroup.controls?.options?.controls.length > 1
+                  "
+                  class="pi pi-minus-circle"
+                  (click)="removeOption(i, j)"
+                ></i>
+              </div>
+            </div>
+          </div>
+          <div></div>
+          <div *ngSwitchCase="'time'">
+            <label>
+              Time:
+              <input
+                type="time"
+                formControlName="answer"
+                class="input-time non-selectable"
+                readonly
+              />
+            </label>
+          </div>
+          <div *ngSwitchCase="'date'">
+            <label>
+              Date:
+              <input
+                type="date"
+                formControlName="answer"
+                class="input-date non-selectable form-control"
+                readonly
+              />
+            </label>
+          </div>
         </div>
+        <div class="requiredd">
+          <label> Required: </label>
+          <input
+            type="checkbox"
+            class="input-checkbox"
+            formControlName="isRequired"
+            (change)="onRequiredChange($event, i)"
+          />
+        </div>
+        <button type="button" class="remove btn btn-outline-danger p-2" (click)="removeQuestion(i)">
+          Remove Question
+        </button>
       </div>
-      <div class="types">
-        <select #questionTypeDropdown (input)="onTypeSelect($event, questionTypeDropdown)" class="question-type-dropdown">
-          <option value="">Select Question Type</option>
-          <option value="short">Short Answer</option>
-          <option value="long">Long Answer</option>
-          <option value="multiple">Multiple Choice</option>
-          <option value="checkbox">Checkbox</option>
-          <option value="time">Time</option>
-          <option value="date">Date</option>
-        </select>
-      </div>
-      <div class="submitform">
-        <button type="submit" class="">Submit</button>
-      </div>
-    </form>
+    </div>
+    <div class="types">
+      <select
+        #questionTypeDropdown
+        (input)="onTypeSelect($event, questionTypeDropdown)"
+        class="question-type-dropdown"
+      >
+        <option value="">Select Question Type</option>
+        <option value="short">Short Answer</option>
+        <option value="long">Long Answer</option>
+        <option value="multiple">Multiple Choice</option>
+        <option value="checkbox">Checkbox</option>
+        <option value="time">Time</option>
+        <option value="date">Date</option>
+      </select>
+    </div>
+    <div class="submitform">
+      <button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Submit</button>
+    </div>
   </div>
 
   <div class="form-preview">
